# duatic_simulation

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yml
docker/: docker-compose.yml
launch/: gazebo.launch.py  ros_gz_bridge.launch.py  spawn.launch.py  spawn_robot.launch.py
models/aws_robomaker_warehouse/: model.sdf
models/aws_robomaker_warehouse_Bucket_01/: metadata.pbtxt
models/aws_robomaker_warehouse_ClutteringA_01/: metadata.pbtxt
models/aws_robomaker_warehouse_ClutteringC_01/: metadata.pbtxt
models/aws_robomaker_warehouse_ClutteringD_01/: metadata.pbtxt
models/aws_robomaker_warehouse_GroundB_01/: metadata.pbtxt  model.sdf
models/aws_robomaker_warehouse_Lamp_01/: metadata.pbtxt  model.sdf
models/aws_robomaker_warehouse_PalletJackB_01/: metadata.pbtxt
models/aws_robomaker_warehouse_ShelfD_01/: metadata.pbtxt
models/aws_robomaker_warehouse_ShelfE_01/: metadata.pbtxt
models/aws_robomaker_warehouse_ShelfF_01/: metadata.pbtxt
models/aws_robomaker_warehouse_TrashCanC_01/: metadata.pbtxt
models/aws_robomaker_warehouse_WallB_01/: metadata.pbtxt
scripts/: start_sim.py
test/: launch_gazebo_warehouse.py
worlds/: duatic_empty.sdf  industrial-warehouse.sdf  warehouse.sdf
